--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@angular/platform-browser": "~2.4.0",
     "@angular/platform-browser-dynamic": "~2.4.0",
     "@angular/router": "~3.4.0",
+    "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
+    "ng2-charts": "^1.5.0",
     "rxjs": "5.0.1",
     "zone.js": "^0.7.4"
   },
